syntax = "proto3";

option csharp_namespace = "UserService";

service UserProtoService {
  rpc GetUserInfo (UserRequest) returns (UserResponse);
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
}
